--- a/TimerApp/Base.lproj/Main.storyboard
+++ b/TimerApp/Base.lproj/Main.storyboard
@@ -12,11 +12,11 @@
             <objects>
                 <viewController id="KJy-zr-VaK" customClass="ManageTimersViewController" customModule="TimerApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F7k-vT-zdz">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vxo-1y-N6L">
-                                <rect key="frame" x="0.0" y="56" width="414" height="752"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="timerTitleCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="timerTitleCell" textLabel="lQX-J2-Whi" detailTextLabel="6AH-LT-UUo" style="IBUITableViewCellStyleValue1" id="Ou3-8X-Fhl">
@@ -85,7 +85,7 @@
                                 <state key="normal" title="Start Timer"/>
                                 <connections>
                                     <action selector="startButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JRq-qQ-A5w"/>
-                                    <segue destination="qSL-7e-VA7" kind="modal" id="23h-Dw-iqq"/>
+                                    <segue destination="KJy-zr-VaK" kind="show" id="m2k-cw-LbI"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -130,24 +130,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OV5-Ue-273" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="112.5"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="ETx-z2-iJy">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qSL-7e-VA7" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Hss-Tc-QZC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="KJy-zr-VaK" kind="relationship" relationship="rootViewController" id="z7v-cq-cVQ"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Aeb-mA-Ni4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="138" y="-724"/>
         </scene>
     </scenes>
 </document>
